      (John Arbash Meinel)

  IMPROVEMENTS:

    * ``bzr branch`` now has a ``--no-tree`` option which turns off the
      generation of a working tree in the new branch.
      (Daniel Watkins, John Klinger, #273993)

    * Bazaar will now point out ``bzr+ssh://`` to the user when they 
      use ssh://. (Jelmer Vernooij, #330535)

    * Support for GSSAPI authentication when using HTTP or HTTPS. 
      (Jelmer Vernooij)

    * The ``bzr shelve`` prompt now includes a '?' help option to explain the
      short options better. (Daniel Watkins, #327429)

  BUG FIXES:

    * ``bzr unshelve`` gives a more palatable error if passed a non-integer
      shelf id. (Daniel Watkins)

    * ``bzr missing`` now uses ``Repository.get_revision_delta()`` rather
      than fetching trees and determining a delta itself. (Jelmer
      Vernooij, #315048)

    * Many Branch hooks would not fire with ``bzr://`` and ``bzr+ssh://``
      branches, and this was not noticed due to a bug in the test logic
      for branches. This is now fixed and a test added to prevent it
      reoccuring. (Robert Collins, Andrew Bennetts)

  DOCUMENTATION:

    * The documentation for ``shelve`` and ``unshelve`` has been clarified.
      (Daniel Watkins, #327421, #327425)

  API CHANGES:

  INTERNALS:

    * ``bzrlib.fetch`` is now composed of a sender and a sink component
      allowing for decoupling over a network connection. (Andrew Bennetts,
      Robert Collins)

    * There is a RemoteSink object which handles pushing to smart servers.
      (Andrew Bennetts, Robert Collins)

    * ``bzrlib.tests.run_suite`` accepts a runner_class parameter
      supporting the use of different runners. (Robert Collins)

    * Creating a repository on a bzr+ssh:// server will now make a single
      call rather than many VFS calls. (Robert Collins)

    * New hook Commands['extend_command'] to allow plugins to access a
      command object before the command is run (or help generated from